# fvwm-menu-desktop

./: ChangeLog.md  README.md  fvwm-menu-desktop  fvwm-menu-desktop.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: fvwm-menu-desktop_generate.py  fvwm_menu_constants.py  fvwm_menu_desktop_args.py  fvwm_menu_desktop_constants.py  fvwm_menu_desktop_image.py
