[tool.poetry]
name = "fvwm-menu-desktop"
version = "0.1.0"
description = "A script which parses xdg menu definitions to build the corresponding fvwm menus."
authors = ["Ron Georgia <rong1611@gmail.com>"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "fvwm_menu_desktop"}]

[tool.poetry.dependencies]
python = "^3.10"
pyxdg = "^0.28"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
